[feature] add data table support for step definitions Squashed commit of the following:
commit c35b835c2d54c9714cebd3e66f8cae8232cffd99
Author: Matthias Carell <rumpelcenter-github@yahoo.de>
Date:   Thu Oct 21 14:08:16 2021 +0200

    add generic feature parse table

commit 5a0b463a156274d5e8861381d090529e853215d2
Author: Matthias Carell <rumpelcenter-github@yahoo.de>
Date:   Fri Oct 15 12:29:58 2021 +0200

    rewrite example from report in progress format into a version using a data table

commit 23fd8f16164363e2ae39fc3c12078395e11e72de
Author: Matthias Carell <rumpelcenter-github@yahoo.de>
Date:   Fri Oct 15 11:23:13 2021 +0200

    add data_table as parameter to step function code template

commit c9ac902c9f95e5187d4584b70080a6dc75319db3
Author: Matthias Carell <rumpelcenter-github@yahoo.de>
Date:   Thu Oct 14 14:58:15 2021 +0200

    complete parsing data tables + improve raising errors

commit 6e8c934e8c3ac814cd3801f63883d76945afe513
Author: Matthias Carell <rumpelcenter-github@yahoo.de>
Date:   Tue Sep 28 13:51:32 2021 +0200

    add feature parse data table

--- a/source/TFeatureRunner.cls
+++ b/source/TFeatureRunner.cls
@@ -27,8 +27,8 @@ Public Sub run_feature(example_container As TExampleContainer, Optional filter_t
     example_runner.setup m_session
     If example_container.containerType = "feature" Then
         m_session.statistics.log_event LOG_EVENT_RUN_FEATURE, example_container.wholeName, ExtraVBA.get_unix_timestamp_now
-        m_session.Reporter.report REPORT_MSG_TYPE_FEATURE_NAME, example_container.name
-        m_session.Reporter.report REPORT_MSG_TYPE_DESC, example_container.description
+        m_session.reporter.report REPORT_MSG_TYPE_FEATURE_NAME, example_container.name
+        m_session.reporter.report REPORT_MSG_TYPE_DESC, example_container.description
     End If
     For Each feature_section In example_container.sections
         If TypeName(feature_section) = "TExample" Then
@@ -47,7 +47,7 @@ Public Sub run_feature(example_container As TExampleContainer, Optional filter_t
         ElseIf TypeName(feature_section) = "TRule" Then
             Set current_rule = feature_section
             ' a rule can contain  examples like a feature > so run it like a feature
-            m_session.Reporter.report REPORT_MSG_TYPE_RULE, feature_section.wholeName
+            m_session.reporter.report REPORT_MSG_TYPE_RULE, feature_section.wholeName
             run_feature current_rule, filter_tag
             m_session.statistics.log_event LOG_EVENT_RUN_RULE, example_container.wholeName, ExtraVBA.get_unix_timestamp_now
         End If
