--- a/source/TReportFormatterProgress.cls
+++ b/source/TReportFormatterProgress.cls
@@ -23,14 +23,14 @@ Public Function process_msg(msg_package As Collection) As String
         Case REPORT_MSG_TYPE_STEP
             count_step
             If step_counter Mod 80 = 0 And step_counter > 0 Then message = message & vbLf
-            Reporter.print_report message, consecutive:=True
+            reporter.print_report message, consecutive:=True
         Case REPORT_MSG_TYPE_CODE_TEMPLATE
-            Reporter.add_code_template_to_buffer msg_package(REPORT_MSG_CONTENT)
+            reporter.add_code_template_to_buffer msg_package(REPORT_MSG_CONTENT)
         Case REPORT_MSG_TYPE_PARSE_ERR
-            Reporter.print_report message
+            reporter.print_report message
         Case REPORT_MSG_TYPE_STATS
             message = vbLf & message
-            Reporter.print_report message
+            reporter.print_report message
     End Select
     process_msg = message
 End Function
@@ -43,7 +43,7 @@ Public Function format_msg_content(msg_package As Collection) As String
         Case REPORT_MSG_TYPE_STEP
             formatted_msg = format_step(msg_package(REPORT_MSG_CONTENT), msg_package(REPORT_MSG_STATUS), msg_package(REPORT_MSG_ERR))
         Case REPORT_MSG_TYPE_CODE_TEMPLATE
-            Reporter.add_code_template_to_buffer msg_package(REPORT_MSG_CONTENT)
+            reporter.add_code_template_to_buffer msg_package(REPORT_MSG_CONTENT)
         Case REPORT_MSG_TYPE_STATS
             formatted_msg = vbLf & msg_package(REPORT_MSG_CONTENT)
         Case REPORT_MSG_TYPE_PARSE_ERR
@@ -76,13 +76,13 @@ Public Function format_step(step_name As String, status As String, err_msg As St
             formatted_msg = "S"
         Case STATUS_FAIL
             formatted_msg = "F"
-            Reporter.add_err_msg_to_buffer "Err in step: " & step_name
+            reporter.add_err_msg_to_buffer "Err in step: " & step_name
         Case Else
             Debug.Print "unknown step status >" & status & "<"
     End Select
     'add err msg if available
     If err_msg <> vbNullString Then
-        Reporter.add_err_msg_to_buffer Space(2) & err_msg
+        reporter.add_err_msg_to_buffer Space(2) & err_msg
     End If
     format_step = formatted_msg
 End Function
@@ -95,11 +95,11 @@ Private Property Get step_implementation_templates() As Collection
     Set step_implementation_templates = m_step_implementation_templates
 End Property
 
-Public Property Get Reporter() As TReport
-    Set Reporter = m_reporter
+Public Property Get reporter() As TReport
+    Set reporter = m_reporter
 End Property
 
-Public Property Let Reporter(ByVal new_reporter As TReport)
+Public Property Let reporter(ByVal new_reporter As TReport)
     Set m_reporter = new_reporter
 End Property
 
