--- a/source/TSpecExpectation.cls
+++ b/source/TSpecExpectation.cls
@@ -198,7 +198,7 @@ End Sub
 Private Sub raise_expectation_err(fail_msg)
     
     TSpec.LastFailMsg = fail_msg
-    Err.Raise Number:=ERR_ID_EXPECTATION_STATUS_FAILED, description:=fail_msg
+    Err.raise Number:=ERR_ID_EXPECTATION_STATUS_FAILED, description:=fail_msg
 End Sub
 
 
