--- a/step_definitions/Steps_Run_Examples.cls
+++ b/step_definitions/Steps_Run_Examples.cls
@@ -47,7 +47,7 @@ Public Sub When_the_example_is_executed_8C8F015690BC(example_context As TContext
         Set parsed_feature = example_context.get_value("parsed_feature")
     End If
     example_context.set_value New TSession, "session"
-    example_context.get_value("session").Reporter.enable_silent_mode
+    example_context.get_value("session").reporter.enable_silent_mode
     feature_runner.setup example_context.get_value("session")
     feature_runner.run_feature parsed_feature
 End Sub
