--- a/step_definitions/Steps_run_tests.cls
+++ b/step_definitions/Steps_run_tests.cls
@@ -30,7 +30,7 @@ Public Sub When_Senfgurke_executes_the_feature_7D772B9CDDDE(example_context As T
     'When Senfgurke executes the feature
     example_context.set_value New TSession, "session"
     With example_context.get_value("session")
-        .Reporter.enable_silent_mode
+        .reporter.enable_silent_mode
         .run_test features_as_text:=example_context.get_value("loaded_features")
     End With
 End Sub
@@ -39,7 +39,7 @@ Public Sub When_a_test_is_started_with_STR_as_parameter_EA8A08D9425A(example_con
     'When a test is started with {string} as parameter
     example_context.set_value New TSession, "session"
     With example_context.get_value("session")
-        .Reporter.enable_silent_mode
+        .reporter.enable_silent_mode
         .statistics.enable_event_log
         .run_test features_as_text:=example_context.get_value("loaded_features"), filter_tag:=step_expressions(1)
     End With
@@ -47,12 +47,12 @@ End Sub
 
 Public Sub Then_the_error_STR_is_reported_80FDB77BCB22(example_context As TContext, step_expressions As Collection)
     'Then the error {string} is reported
-    TSpec.expect(example_context.get_value("session").Reporter.ConsoleOutput).includes_text step_expressions(1)
+    TSpec.expect(example_context.get_value("session").reporter.ConsoleOutput).includes_text step_expressions(1)
 End Sub
 
 Public Sub Then_the_name_of_the_feature_file_is_reported_as_l_1A076B1EB8D5(example_context As TContext)
     'And the name of the feature file is reported as location of the error
-    TSpec.expect(example_context.get_value("session").Reporter.ConsoleOutput).includes_text example_context.get_value("feature_origin")
+    TSpec.expect(example_context.get_value("session").reporter.ConsoleOutput).includes_text example_context.get_value("feature_origin")
 End Sub
 
 Public Sub Then_only_the_example_from_the_tagged_feature_was__858E135D9F78(example_context As TContext)
