--- a/step_definitions/Steps_Run_Steps.cls
+++ b/step_definitions/Steps_Run_Steps.cls
@@ -26,6 +26,13 @@ Public Sub Given_an_invalid_step_CF4B201BCF1B(example_context As TContext)
     TSpec.expect(1).to_be 2
 End Sub
 
+Public Sub Given_a_list_of_numbers_FF6B22C2A68F(example_context As TContext, data_table As TDataTable)
+    ' this is not an actual step but a step inside the example "calling step function for a step with a data_table"
+    ' the step is about validating that data_table is set as step function parameter
+    ' example_context refers to the context of that example
+    example_context.set_value data_table, "data_table"
+End Sub
+
 Public Sub Given_a_step_returning_PENDING_without_a_pending_m_F201CAEBCFB1(example_context As TContext)
     'Given a step returning PENDING without a pending message
     example_context.set_value TStepParser.parse_step_line("Given a pending step", New Collection), "example_step"
@@ -57,7 +64,13 @@ End Sub
 
 Public Sub Given_a_step_STR_F5C6F4BA1D15(example_context As TContext, step_expressions As Collection)
     'Given a step {string}
-    example_context.set_value TStepParser.parse_step_line(step_expressions(1), New Collection), "example_step"
+    Dim parent_feature As TFeature
+    Dim step As TStep
+    
+    Set parent_feature = New TFeature
+    parent_feature.parsed_lines = -1
+    Set step = TStepParser.parse_step_list(step_expressions(1), parent_feature)(1)
+    example_context.set_value step, "example_step"
 End Sub
 
 Public Sub When_the_step_is_executed_CEB06B444334(example_context As TContext)
@@ -66,7 +79,7 @@ Public Sub When_the_step_is_executed_CEB06B444334(example_context As TContext)
     
     Set step_runner = New TStepRunner
     example_context.set_value New TSession, "session"
-    example_context.get_value("session").Reporter.enable_silent_mode
+    example_context.get_value("session").reporter.enable_silent_mode
     step_runner.setup example_context.get_value("session")
     example_context.set_value step_runner.run_step(example_context.get_value("example_step"), New TContext), "step_result"
 End Sub
@@ -79,6 +92,18 @@ End Sub
 Public Sub When_the_step_is_translated_into_a_function_name_D820185C4AF6(example_context As TContext)
     'When the step is translated into a function name
     example_context.set_value example_context.get_value("example_step").get_step_function_name, "step_function_name"
+End Sub
+
+Public Sub When_the_step_function_is_called_418C5F83C560(example_context As TContext)
+    'When the step function is called
+    Dim step As TStep
+    Dim step_runner As TStepRunner
+    Dim step_result As Variant
+    
+    Set step_runner = New TStepRunner
+    Set step = example_context.get_value("example_step")
+    step_runner.try_step Me, step.get_step_function_name, step.Expressions, example_context, step.data_table
+    Set step_runner = Nothing
 End Sub
 
 Public Sub Then_the_execution_result_is_STR_80FDCF952A5A(example_context As TContext, step_expressions As Collection)
@@ -96,3 +121,11 @@ Public Sub Then_the_name_of_the_resulting_function_is_STR_C88DE530F4BA(example_c
     TSpec.expect(example_context.get_value("step_function_name")).to_be step_expressions(1)
 End Sub
 
+Public Sub Then_the_data_table_is_passed_as_a_parameter_CA3BC28813EC(example_context As TContext)
+    'Then the data table is passed as a parameter
+    Dim data_table As TDataTable
+    
+    Set data_table = example_context.get_value("data_table")
+    TSpec.expect(data_table.column_names.Count).to_be 1
+    TSpec.expect(data_table.table_rows.Count).to_be 3
+End Sub
