--- a/step_definitions/Steps_Run_features.cls
+++ b/step_definitions/Steps_Run_features.cls
@@ -16,8 +16,8 @@ Public Sub When_the_feature_is_executed_8C8F454A90BC(example_context As TContext
     Dim feature_runner As TFeatureRunner
     Dim session As TSession
     
-    Set feature_runner = New TFeatureRunner
-    Set session = New TSession
+    Set feature_runner = THelper.new_TFeatureRunner
+    Set session = THelper.new_TSession
     example_context.set_value session, "session"
     session.reporter.enable_silent_mode
     session.statistics.enable_event_log
@@ -33,8 +33,8 @@ Public Sub When_the_feature_is_executed_with_tag_parameter_ST_E9DFF72092D9(examp
     Dim feature_runner As TFeatureRunner
     Dim session As TSession
     
-    Set feature_runner = New TFeatureRunner
-    Set session = New TSession
+    Set feature_runner = THelper.new_TFeatureRunner
+    Set session = THelper.new_TSession
     example_context.set_value session, "session"
     session.reporter.enable_silent_mode
     session.statistics.enable_event_log
