--- a/source/TStep.cls
+++ b/source/TStep.cls
@@ -6,7 +6,7 @@ Attribute VB_Name = "TStep"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
-Attribute VB_Exposed = False
+Attribute VB_Exposed = True
 Option Explicit
 
 Dim m_step_type As String
