--- a/step_definitions/Steps_collect_statistics.cls
+++ b/step_definitions/Steps_collect_statistics.cls
@@ -11,7 +11,7 @@ Option Explicit
 
 Public Sub Given_a_new_test_run_started_collecting_statistics_152BAB44CFC9(example_context As TContext)
     'Given a new test run started collecting statistics
-    example_context.set_value New TSession, "session"
+    example_context.set_value THelper.new_TSession, "session"
     example_context.get_value("session").reporter.enable_silent_mode
 End Sub
 
