--- a/step_definitions/senfgurke_steps_workbook.cls
+++ b/step_definitions/senfgurke_steps_workbook.cls
@@ -2,7 +2,7 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "senfgurke_workbook"
+Attribute VB_Name = "senfgurke_steps_workbook"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = True
@@ -18,9 +18,9 @@ Private Sub exportCode()
     Dim path_separator As String
     Dim file_suffix As String
 
-    path_separator = get_path_separator
+    path_separator = ExtraVBA.get_path_separator
     base_path = ThisWorkbook.Path
-    For Each vbe_source_object In Application.VBE.VBProjects("Senfgurke").VBComponents
+    For Each vbe_source_object In Application.VBE.VBProjects("Senfgurke_Steps").VBComponents
         Select Case vbe_source_object.Type
             Case vbext_ct_StdModule
                 file_suffix = "bas"
@@ -33,13 +33,9 @@ Private Sub exportCode()
             Case Else
                 file_suffix = "txt"
         End Select
-        If Left(vbe_source_object.name, 6) = "Steps_" Or Left(vbe_source_object.name, 8) = "Support_" Then
-            sub_path = "step_definitions" & path_separator & "source    "
-        Else
-            sub_path = "source"
-        End If
+        'save the code of the step definition classes in the step_definitions directory instead of the source directory
+        sub_path = "step_definitions"
         file_path = base_path & path_separator & sub_path & path_separator & vbe_source_object.name & "." & file_suffix
-        file_path = Replace(file_path, path_separator & "addins", vbNullString)
         Debug.Print "export code to " & file_path
         #If Mac Then
             'try not to change forms unless Microsoft offers full support for forms on the Mac!
